# Pytest

./: .env  .gitignore  .local.env  pyproject.toml  pytest.ini  test-results.xml  test_runner.py
test/: test_example.py
